--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -144,3 +144,14 @@ a:link {
   background-color: rgb(215, 36, 36);
   border: none;
 }
+
+@media only screen and (min-width : 320px) {
+  .container {
+    padding: 4px 8px;
+    max-width: 767px;
+  }
+
+  #table-of-content {
+    display: none;
+  }
+}
