--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -145,7 +145,7 @@ a:link {
   border: none;
 }
 
-@media only screen and (min-width : 320px) {
+@media only screen and (max-width : 320px) {
   .container {
     padding: 4px 8px;
     max-width: 767px;
